Electromagnetic ripetere for processi

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+%~/Ripetere/sciripetere
 \makeatletter
 \let\@starttocorig\@starttoc
 \makeatother
@@ -60,7 +61,7 @@
 %\makeatother
 \maketitle
 \listoftodos
-\tableofcontents*
+\tableofcontents%~/Ripetere/sciripetere*
 \input{proc}%subfile
 %\stopcontents[chapters]
 \end{document}
